RESOLVED FIXED308021
REGRESSION (307520@main): Webpage crashes trying to inspect a <select> element
https://bugs.webkit.org/show_bug.cgi?id=308021
Summary REGRESSION (307520@main): Webpage crashes trying to inspect a <select> element
Tim Nguyen (:ntim)
Reported 2026-02-16 18:19:01 PST
Attachments
Tim Nguyen (:ntim)
Comment 1 2026-02-16 18:22:24 PST
EWS
Comment 2 2026-02-16 20:22:53 PST
Committed 307684@main (ebc04e9b23b0): <https://commits.webkit.org/307684@main> Reviewed commits have been landed. Closing PR #58829 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.