REGRESSION (307520@main): Webpage crashes trying to inspect a <select> element https://bugs.webkit.org/show_bug.cgi?id=308021 rdar://170517420

Reviewed by Simon Fraser.

Treat -internal-auto-base() like var() and don't try to eagerly serialize.

* LayoutTests/fast/forms/appearance-base/internal-auto-base-function-crash-expected.html: Added.
* LayoutTests/fast/forms/appearance-base/internal-auto-base-function-crash.html: Added.
* Source/WebCore/css/ShorthandSerializer.cpp:
(WebCore::ShorthandSerializer::commonSerializationChecks):

Canonical link: https://commits.webkit.org/307684@main